# dyrwattAS

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: run_pipeline.yaml
models/gold/: dim_date.sql  dim_omrader.sql  fact_magasinstatistikk.sql  fact_minmax.sql  fact_vaer.sql
models/silver/: frost_nedbor.sql  nve_elspot_omrader.sql  nve_kapasitet.sql  nve_magasinstatistikk.sql  nve_minmax_20ar.sql  sensor_omrade.sql
pipelines/: frost_pipeline.py  nve_pipeline.py
seeds/: vaersensor_elspotomrade.csv
sources/: frost.py  nve.py
