[project]
name = "dyrwattas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[motherduck]>=1.27.2",
    "requests>=2.34.2",
    "sqlmesh>=0.235.3",
]

[dependency-groups]
dev = [
    "duckdb==1.5.2",
    "ipykernel>=7.2.0",
    "polars>=1.41.2",
]
